<resources>
    <string name="app_name">Pomodoro</string>
    <string name="minutes">Minutes</string>
    <string name="add_timer">Add Timer</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timer_indicator">Timer indicator</string>
    <string name="reset_button">Reset button</string>
    <string name="delete_button">Delete button</string>
</resources>