<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/blinking_indicator"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/blinking_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/timer_indicator" />

        <TextView
            android:id="@+id/stopwatch_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_00_00_00"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/blinking_indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.pomodoro.CustomView
            android:id="@+id/custom_view_two"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:padding="4dp"
            app:custom_color="?colorPrimaryVariant"
            app:custom_style="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/startPauseButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/startPauseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reset_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/reset_button"
            style="@style/ControlButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_refresh_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/reset_button" />

        <ImageButton
            android:id="@+id/delete_button"
            style="@style/ControlButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>